#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)
AC_INIT(cppweka, 1.0, guo.18@wright.edu)
AM_INIT_AUTOMAKE(cppweka, 1.0)
AC_CONFIG_SRCDIR([AllJavadoc.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS(floor pow rint select sqrt)

AC_OUTPUT(Makefile)# logging/Makefile converters/Makefile matrix/Makefile \
dnl neighboursearch/Makefile neighboursearch/kdtrees/Makefile \
dnl neighboursearch/balltrees/Makefile neighboursearch/covertrees/Makefile \
dnl tokenizers/Makefile pmml/Makefile stemmers/Makefile mathematicalexpression/Makefile xml/Makefile)
